--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Vinay",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "nodemon": "^2.0.22"
